# Course-Knowledge-Graphs

./: .gitignore  00-vertex-degree-min.py  01-connected-component.py  01-metis.py  01-triangle-count.py  02-dblp-linked-data-extraction.py  11-metis-from-sparql.py  README.md  flake.nix  pyproject.toml  todo.md
graphs/: __init__.py  io.py
programs/: 00-max-out-degree.py
queries/: 10.4-inverses.rls  11.1-property-constraints.rls  11.1-property-constraints.sparql  3.4-nobel-prize.sparql  3.5.0-triangles.sparql  3.5.1-triangles.sparql  4.1-spaceflight.sparql  4.1-studer.sparql  4.2-literary-characters.sparql  4.2.0-sudoku.sparql  4.2.1-sudoku.sparql  4.3-spaceflight.sparql  4.4-clique.sparql  4.6-clique.sparql  4.6.1-composers.sparql  4.6.2-bands.sparql  4.6.3-genres.sparql  4.6.4-states-genres.sparql  5.4-dblp-coauthors.rls  5.5-dbpedia-wikidata.rls  6.4.2-instruments.sparql  6.4.3-bands.sparql  6.4.4-bands.sparql  6.5-bach-related.rls  7.3-lexemes.sparql  8.3-bach-related.sparql  8.5-bach-related.rls  8.5.1-universities.sparql  8.5.2-instruments.sparql  8.5.3-musical-works.sparql  8.5.4-bands.sparql  8.5.5-genres.sparql  8.5.6-genres.sparql  9.3-parents-interactive.rls  9.3-parents.rls  9.4.2-bacon.cypher  9.4.3-movie-persons.cypher  9.4.4-triangles.cypher
scripts/: authorship-from-dblp.py  coauthors-from-dblp.py  coauthours-from-dblp.py  generate-random-graph.py  subgraph-from-wikidata.py
solutions/: 00-vertex-degree-min.py  00-vertex-degree.py  01-metis.py  01-triangle-count.py  01-vertex-degree.py  02-bipartite.py  03-dblp-linked-data-extraction-template.py  (+5 more)
(+95 files in other folders)
